Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -170,7 +170,7 @@ footer {
 		background-size: 95%;
 		background-image: url("{{ site.baseurl }}/assets/img/largescrolltop.png");
 		background-repeat: no-repeat;
-	  	background-position: center;
+	  	background-position: center top;
 		background-attachment: scroll;
 		}
 	section {
@@ -185,7 +185,7 @@ footer {
 		background-size: 95%;
 		background-image: url("{{ site.baseurl }}/assets/img/largescrollbottom.png");
 		background-repeat: no-repeat;
-	  	background-position: center;
+	  	background-position: center bottom;
 		background-attachment: scroll;
 		}
 	.content {
